# armadito-mod-clamav

./: .gitignore  .travis.yml  README.md  configure.ac  sonar-project.properties
conf/: clamav.conf  clamav.conf.in
src/: Makefile.am  clamav.c
src/os/linux/: osdeps.c
